# gui-yt-dlp

./: .gitignore  CHANGELOG.md  Makefile  README.md  build.bat  gui-yt-dlp.spec  launcher.py  pyproject.toml  requirements.txt
.github/workflows/: build-windows.yml  release.yml
src/: config.py  download_manager.py  main.py  yt_dlp_worker.py
src/gui/: downloader_tab.py  library_tab.py  main_window.py  queue_tab.py  settings_tab.py  themes.py
src/gui/widgets/: format_selection_dialog.py  playlist_fallback_dialog.py
src/utils/: ffmpeg_check.py  library_manager.py  logger.py  network_monitor.py  speed_test.py
